fixed, to fix exception handler